API ChangeLog	(see the ChangeLog in each 'apps' directory for
		app specific changes


20-Oct-2002	Troy A. Griffitts <scribe@crosswire.org>
	Added optimizations for ListKey persistent keys
		in VerseKey drivers

09-Oct-2002	Daniel Glassey <dglassey@crosswire.org>
	Add debian directory so you can build debs from cvs

* Release 1.5.4a *

07-Oct-2002	Troy A. Griffitts <scribe@crosswire.org>
	Fixed rawFilter bug where entrySize was being passed
		instead of maxBufferSize.  This problem caused 
		a number of problems with the engine.
	Applied a few of Franklin Bratcher's critical patches
		to diatheke.

01-Oct-2002	Daniel Glassey <dglassey@crosswire.org>
	Work on sword swig perl binding
	Change sword to use a sword namespace
	Fix to build with gcc3.2 again after yesterday

30-Sep-2002	Daniel Glassey <dglassey@crosswire.org>
	Remove using namespace std from all headers

28-Sep-2002	Troy A. Griffitts <scribe@crosswire.org>
	Added SWModule::Index and SWCom and SWText impls


* Release 1.5.4 *

25-Sep-2002     Troy A. Griffitts <scribe@crosswire.org>
	Fixed zverse zstr zcom ztext zld to work with cipher
	Added cipher key to mod2zmod

27-Aug-2002     Troy A. Griffitts <scribe@crosswire.org>
	Added Nikolay Igotti's logic for improved non-western
		locale functionality
	Fixed mod2zmod to work properly with headings
	Fixed cheatah to allow heading texts like 'Mat 0:0'

08-Aug-2002     Troy A. Griffitts <scribe@crosswire.org>
	Added support for new entry in /etc/sword.conf
		[Install]
			AugmentPath=/where/ever
		multiple entries can exist.

31-Jul-2002	Daniel Glassey <dglassey@crosswire.org>
	Minor change to use iostream not iostream.h (more gcc3)

31-Jul-2002     Troy A. Griffitts <scribe@crosswire.org>
	Fixed FileMgr::trunc if trunc should be empty was
		leaving a 1 byte (null) file, instead of empty.

30-Jul-2002     Troy A. Griffitts <scribe@crosswire.org>
	Fixed zLD link bug where resolving incorrectly
		skipped IDXENTRYSIZE instead of 6 ("@LINK ").